AuthService/k-native-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: auth-service
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "0"
        autoscaling.knative.dev/maxScale: "5"
    spec:
      containers:
        - image: rovin123/auth-service:v1.0.0
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 80
          env:
            - name: ASPNETCORE_URLS
              value: "http://*:80"    
          envFrom:
            - secretRef:
                name: auth-service-secrets
            - configMapRef:
                name: auth-service-config
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
